# politrack

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: watch.yml
.streamlit/: config.toml
dashboard/: app.py
data/: politrack.db
data/cache/: committees.json  legislators.json  memberships.json
reports/: 1-wab.md  10-pg.md  101-cci.md  102-abt.md  103-abt.md  104-adi.md  105-adi.md  106-blk.md  107-csco.md  108-csco.md  109-ice.md  11-tsco.md  110-imcb.md  111-lhx.md  112-lhx.md  113-spsm.md  114-unh.md  115-unh.md  116-mgk.md  117-mgk.md  118-dash.md  12-tpyp.md  120-tsco.md  121-zts.md  123-fll.md  124-fll.md  125-tsm.md  126-ifnny.md  127-ifnny.md  128-meli.md  129-meli.md  13-ftgc.md  130-ma.md  131-wday.md  132-intu.md  133-intu.md  134-dhr.md  135-spgi.md  136-keys.md  137-dell.md  (+216 more)
src/politrack/: cli.py  config.py  db.py  extract.py  models.py  notify.py  pipeline.py
src/politrack/analysis/: agent.py  committees.py  report.py  tools.py
src/politrack/sources/: base.py  house.py  oge.py  senate.py
tests/: test_parsers.py
tests/fixtures/: house_index.txt  oge_bydate.html  senate_data.json
