[project]
name = "politrack"
version = "0.1.0"
description = "Dashboard surfacing interesting stocks from US politician trading disclosures"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.116.0",
    "pydantic>=2.7",
    "httpx>=0.27",
    "curl_cffi>=0.7",
    "pyyaml>=6.0",
    "yfinance>=0.2.50",
    "streamlit>=1.40",
    "python-dotenv>=1.0",
    "python-frontmatter>=1.1",
    "typer>=0.12",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
politrack = "politrack.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
